# jamur-email-client

./: .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/workflows/: dev.yml  main.yml  pr.yml
src/: App.css  App.scss  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-08-29-175506_create_emails/: down.sql  up.sql
src-tauri/migrations/2024-09-03-173822_create_keychain_entry/: down.sql  up.sql
src-tauri/migrations/2024-09-04-130758_create_access_token/: down.sql  up.sql
src-tauri/migrations/2024-09-08-190949_create_simple_mail_credentials/: down.sql  up.sql
src-tauri/migrations/2024-10-10-082317_add_folder_path_to_email/: down.sql  up.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: imap.rs  messages.rs  mod.rs  user.rs
src-tauri/src/commands/google/: oauth.rs
src-tauri/src/commands/helper/: helper_keyring.rs  helper_messages.rs  mod.rs
src-tauri/src/database/: access_token_repository.rs  db.rs  db_init.rs  email_repository.rs  keychain_entry_repository.rs  mod.rs  schema.rs  simple_mail_credentials_repository.rs
src-tauri/src/snacks/: mod.rs  snacks.rs
src-tauri/src/structs/: access_token.rs  auth.rs  email.rs  imap_email.rs  keychain_entry.rs  mod.rs  simple_mail_credentials.rs  snack.rs
src-tauri/src/structs/google/: email.rs
src/components/: EmailBody.tsx  EmailComponent.tsx
src/components/auth-google/: AuthGoogle.tsx  style.css  style.scss
src/components/email/: EmailComponent.css  EmailComponent.tsx  style.scss
src/components/email/attachments/: EmailAttachmentComponent.css  EmailAttachmentComponent.scss  EmailAttachmentComponent.tsx
src/components/email/body/: EmailBody.css  EmailBody.tsx
src/components/email/detail/: EmailDetailsComponent.tsx
src/components/email/preview/: EmailPreview.tsx  style.scss
src/components/initial-setup/: InitialSetup.tsx  style.scss
src/components/loading/: LoadingComponent.tsx  style.scss
src/components/menu/: Menu.tsx  style.scss
src/components/shadow-root/: ShadowRoot.tsx
src/components/smtp-setup/: SmtpSetup.tsx  style.css
src/components/snacks/: SnacksView.tsx
src/interfaces/: Email.ts  GEmail.ts  KeychainEntry.ts  Snacks.ts  WebEmail.ts
src/state/: atoms.ts
src/ui/: theme.ts
src/ui/button/: Button.tsx  style.css  style.scss
src/utils/: Locale.ts  UseTauriInvoke.ts
