[package]
name = "jamur-email-client"
version = "0.0.1"
description = "Email Client"
authors = ["Tymur Pysarevych"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
imap = "2.4.1"
native-tls = "0.2.12"
mail-parser = "0.9.3"
chrono = "0.4.38"
dotenv = "0.15.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
