[package]
name = "jamur-email-client"
version = "0.0.2"
description = "Email Client"
authors = ["Tymur Pysarevych"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = ["shell-open", "fs-all", "window-all"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
imap = "2.4.1"
native-tls = "0.2.12"
mail-parser = { version = "0.9.3", features = ["encoding_rs"] }
chrono = "0.4.38"
dotenv = "0.15.0"
encoding_rs = "0.8.34"
log = "0.4.22"
env_logger = "0.11.5"
regex = "1.10.5"
base64 = "0.22.1"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
diesel = { version = "2.2.3", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
httparse = "1.9.4"

tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.5" }
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
open = "5.3.0"
keyring = { version = "3.2.1", features = ["apple-native", "windows-native", "sync-secret-service"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
